sfdx-source/main/default/objects/VCC_Heartbeat_Template_Parameter__c/VCC_Heartbeat_Template_Parameter__c.object-meta.xml
<CustomObject>
    <description>The object is used to set the parameters that will be used to build the body of the api callout</description>
    <label>Heartbeat Template Parameter</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Heartbeat Template Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>