sfdx-source/main/default/objects/VCC_Heartbeat_Template_Parameter__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>