sfdx-source/main/default/objects/VCC_Heartbeat_Template_Parameter__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Format</label>
    <length>100</length>
    <type>Text</type>
</CustomField>